@@ -1,3 +1,10 @@
+2011-12-30  Rene Liebscher <R.Liebscher@gmx.de>
+
+	patch #7693: Fix config file atmel URLs
+	* avrdude.conf.in: Updated URLs
+	* avrpart.h: Updated URLs
+	* doc/avrdude.texi: Updated URLs
+
 2011-12-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* ser_posix.c (baud_lookup_table): Conditionalize the inclusion of
